Assets change, thumbnails css

--- a/components.html
+++ b/components.html
@@ -276,6 +276,68 @@
         </div>
       </div>
       <br><hr>
+      <h2><b>Thumbnails</b></h2>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Default</b></h3>
+          <div class="col-lg-3">
+            <a href="#" class="thumbnail">
+              <img src="img/img-1-small.jpg" alt="img">
+            </a>
+          </div>
+          <div class="col-lg-3">
+            <a href="#" class="thumbnail">
+              <img src="img/img-2-small.jpg" alt="img">
+            </a>
+          </div>
+          <div class="col-lg-3">
+            <a href="#" class="thumbnail">
+              <img src="img/img-3-small.jpg" alt="img">
+            </a>
+          </div>
+          <div class="col-lg-3">
+            <a href="#" class="thumbnail">
+              <img src="img/img-4-small.jpg" alt="img">
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Custom</b></h3>
+          <div class="col-lg-4">
+            <div class="thumbnail">
+              <img src="img/img-1-small.jpg" alt="img">
+              <div class="caption">
+                <h4><b>Thumbnail label</b></h4>
+                <p>Aenean gravida erat vehicula mi tristique, sit amet facilisis lorem mattis. Morbi non arcu finibus sapien bibendum rhoncus.</p>
+                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="thumbnail">
+              <img src="img/img-2-small.jpg" alt="img">
+              <div class="caption">
+                <h4><b>Thumbnail label</b></h4>
+                <p>Aenean gravida erat vehicula mi tristique, sit amet facilisis lorem mattis. Morbi non arcu finibus sapien bibendum rhoncus.</p>
+                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="thumbnail">
+              <img src="img/img-3-small.jpg" alt="img">
+              <div class="caption">
+                <h4><b>Thumbnail label</b></h4>
+                <p>Aenean gravida erat vehicula mi tristique, sit amet facilisis lorem mattis. Morbi non arcu finibus sapien bibendum rhoncus.</p>
+                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr>
       <h2><b>Alerts</b></h2>
       <div class="row">
         <div class="col-lg-8">
