--- a/components.html
+++ b/components.html
@@ -276,6 +276,17 @@
         </div>
       </div>
       <br><hr>
+      <h2><b>Jumbotron</b></h2><br>
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="jumbotron">
+            <h1>Hello, world!</h1>
+            <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <p><a class="btn btn-primary btn-md" href="#" role="button">Learn more</a></p>
+          </div>
+        </div>
+      </div>
+      <hr>
       <h2><b>Thumbnails</b></h2>
       <div class="row">
         <div class="col-lg-12">
