--- a/components.html
+++ b/components.html
@@ -249,6 +249,60 @@
         </div>
       </div>
       <hr>
+      <h2><b>Button Groups</b></h2>
+      <div class="row">
+        <div class="col-lg-6">
+          <h3><b>Basic</b></h3>
+          <div class="btn-group" role="group" aria-label="btn-groups">
+            <button type="button" class="btn btn-default">Left</button>
+            <button type="button" class="btn btn-default">Middle</button>
+            <button type="button" class="btn btn-default">Right</button>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-6">
+          <h3><b>Button Toolbar</b></h3>
+          <div class="btn-toolbar" role="toolbar" aria-label="numbers">
+            <div class="btn-group" role="group" aria-label="123">
+              <button type="button" class="btn btn-default">1</button>
+              <button type="button" class="btn btn-default">2</button>
+              <button type="button" class="btn btn-default">3</button>
+            </div>
+            <div class="btn-group" role="group" aria-label="456">
+              <button type="button" class="btn btn-default">4</button>
+              <button type="button" class="btn btn-default">5</button>
+              <button type="button" class="btn btn-default">6</button>
+            </div>
+            <div class="btn-group" role="group" aria-label="789">
+              <button type="button" class="btn btn-default">7</button>
+              <button type="button" class="btn btn-default">8</button>
+              <button type="button" class="btn btn-default">9</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <h3><b>Dropdowns</b></h3>
+          <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-default">1</button>
+            <button type="button" class="btn btn-default">2</button>
+
+            <div class="btn-group" role="group">
+              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                Dropdown
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Dropdown link</a></li>
+                <li><a href="#">Dropdown link</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br><hr>
       <h2><b>Labels</b></h2>
       <div class="row">
         <div class="col-lg-12">
