Add Javascript page

--- a/css.html
+++ b/css.html
@@ -23,8 +23,9 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="css-page.html">CSS</a></li>
+          <li class="active"><a href="css.html">CSS</a></li>
           <li><a href="components.html">Components</a></li>
+          <li><a href="javascript.html">Javascript</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Getting Started</a></li>
