--- a/javascript.html
+++ b/javascript.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>UI-Social</title>
+  <title>Javascript - UI Social</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="dist/css/vendor/font-awesome.min.css">
@@ -25,7 +25,7 @@
         <ul class="nav navbar-nav">
           <li><a href="css.html">CSS</a></li>
           <li><a href="components.html">Components</a></li>
-          <li><a href="javascript.html">Javascript</a></li>
+          <li class="active"><a href="javascript.html">Javascript</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Getting Started</a></li>
@@ -34,11 +34,12 @@
       </div>
     </div>
   </nav>
-  <div class="container">
-    <div class="row">
+  <div class="row">
+    <div class="container">
+      <div class="col-lg-10 col-lg-offset-1">
+        <h2><b>Modals</b></h2>
+      </div>
     </div>
   </div>
-  <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
-  <script type="text/javascript" src="dist/js/vendor/bootstrap.min.js"></script>
 </body>
 </html>
