Share buttons to footer, affix fix for smaller screens

--- a/components.html
+++ b/components.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="dist/css/vendor/font-awesome.min.css">
   <link rel="stylesheet" href="dist/css/ui-social.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body data-spy="scroll" data-target="#features-nav" style="position: relative;">
   <nav class="navbar navbar-default" role="navigation">
@@ -34,9 +35,10 @@
     </div>
   </nav>
   <div class="container">
-    <div class="col-lg-2">
-      <div id="features-nav" data-spy="affix" data-offset-top="60" data-offset-bottom="200">
-        <h5><b>Components</b></h5>
+    <div class="col-lg-3">
+      <div id="features-nav" data-spy="affix" data-offset-bottom="200">
+        <br>
+        <h4><b>Components</b></h4>
         <ul class="nav nav-pills nav-stacked">
           <li><a href="#navbar">Navbar</a></li>
           <li><a href="#nav">Nav</a></li>
@@ -56,7 +58,7 @@
         </ul>
       </div>
     </div>
-    <div class="col-lg-10">
+    <div class="col-lg-9">
       <div id="navbar">
         <h2><b>Navbar</b></h2>
         <div class="row">
@@ -838,7 +840,31 @@
       </div>
     </div>
   </div>
+  <br><br><hr>
+  <div class="container">
+    <div class="footer">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 text-center">
+          <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=medium-slider.js&type=fork&count=true"
+          allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
+          <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=medium-slider.js&type=watch&count=true"
+          allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
+          <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&type=follow"
+          allowtransparency="true" frameborder="0" scrolling="0" width="145" height="20"></iframe>
+          
+          <a class="twitter-share-button"
+            href="https://twitter.com/share"
+            data-via="sudharshan_iyer">Tweet</a>
+          <div class="g-plusone" data-size="medium"></div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
   <script type="text/javascript" src="dist/js/vendor/bootstrap.min.js"></script>
+  <script type="text/javascript">
+    window.twttr=(function(d,s,id){var t,js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id)){return}js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);return window.twttr||(t={_e:[],ready:function(f){t._e.push(f)}})}(document,"script","twitter-wjs"));
+  </script>
+  <script type="text/javascript" src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
 </html>
