--- a/index.html
+++ b/index.html
@@ -34,7 +34,19 @@
     </div>
   </nav>
   <div class="container">
-    <div class="row">
+    <div class="row" style="margin-top: 50px;">
+      <div class="col-lg-10 col-lg-offset-1">
+      <div class="jumbotron text-center">
+        <h1>UI-Social</h1>
+        <p>
+          Simple, Elegant, Flat & Built with <a href="http://getbootstrap.com">Bootstrap</a>
+        </p>
+        <p>
+          Open Source, Built with <a href="http://sass-lang.com/">Sass</a>
+        </p><br>
+        <p><a class="btn btn-success btn-lg" href="#" role="button">Download</a></p>
+      </div>
+      </div>
     </div>
   </div>
   <script type="text/javascript" src="dist/js/vendor/jquery.min.js"></script>
