Footer design in all pages

--- a/components.html
+++ b/components.html
@@ -844,7 +844,17 @@
   <div class="container">
     <div class="footer">
       <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 text-center">
+        <div class="col-lg-10 col-lg-offset-1 text-center">
+          <span>MIT License</span> | 
+          <span>Based on <a href="http://getbootstrap.com/">Bootstrap</a></span> |
+          <span>Design by <a href="https://github.com/sudharti">@sudharti</a></span> |
+          <span>Icons - <a href="http://fortawesome.github.io/Font-Awesome/icons/">Fontawesome</a></span> |
+          <span>Images from <a href="https://unsplash.com/">Unsplash</a></span>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-lg-10 col-lg-offset-1 text-center">
           <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=medium-slider.js&type=fork&count=true"
           allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
           <iframe src="http://ghbtns.com/github-btn.html?user=sudharti&repo=medium-slider.js&type=watch&count=true"
