--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Getting Started</a></li>
-          <li><a href="demo/home.html">Demo</a></li>
+          <li><a href="templates/index.html">Templates</a></li>
         </ul>
       </div>
     </div>
