Getting started page

--- a/css.html
+++ b/css.html
@@ -28,7 +28,7 @@
           <li><a href="components.html">Components</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Getting Started</a></li>
+          <li><a href="getting-started.html">Getting Started</a></li>
           <li><a href="templates/index.html">Templates</a></li>
         </ul>
       </div>
