--- a/getting-started.html
+++ b/getting-started.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Social UI - Templates</title>
+  <title>CSS - UI Social</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../dist/css/vendor/bootstrap.min.css">
-  <link rel="stylesheet" href="../dist/css/vendor/font-awesome.min.css">
-  <link rel="stylesheet" href="../dist/css/ui-social.css">
+  <link rel="stylesheet" href="dist/css/vendor/font-awesome.min.css">
+  <link rel="stylesheet" href="dist/css/ui-social.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-  <nav class="navbar navbar-default navbar-inverse" role="navigation">
+<body data-spy="scroll" data-target="#features-nav" style="position: relative;">
+  <nav class="navbar navbar-default" role="navigation">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -20,67 +20,23 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="../index.html">UI-Social</a>
+        <a class="navbar-brand" href="index.html">UI-Social</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="../css.html">CSS</a></li>
-          <li><a href="../components.html">Components</a></li>
+          <li><a href="css.html">CSS</a></li>
+          <li><a href="components.html">Components</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="../getting-started.html">Getting Started</a></li>
-          <li class="active"><a href="index.html">Templates</a></li>
+          <li class="active"><a href="getting-started.html">Getting Started</a></li>
+          <li><a href="templates/index.html">Templates</a></li>
         </ul>
       </div>
     </div>
   </nav>
-  <br><br>
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1">
-        <div class="well">
-          <h2><b>Templates</b></h2><hr>
-          <div class="row">
-            <div class="col-lg-6 col-xs-6 col-md-3">
-              <div class="thumbnail">
-                <img src="../img/img-1-small.jpg" alt="...">
-                <div class="caption">
-                  <h4 class="text-center"><b>Landing Page</b></h4><br>
-                  <p class="text-center"><a href="landing.html" class="btn btn-success" role="button">Live Preview</a></p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6 col-xs-6 col-md-3">
-              <div class="thumbnail">
-                <img src="../img/img-2-small.jpg" alt="...">
-                <div class="caption">
-                  <h4 class="text-center"><b>Login Page</b></h4><br>
-                  <p class="text-center"><a href="#" class="btn btn-success" role="button">Live Preview</a></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 col-xs-6 col-md-3">
-              <div class="thumbnail">
-                <img src="../img/img-3-small.jpg" alt="...">
-                <div class="caption">
-                  <h4 class="text-center"><b>Timeline</b></h4><br>
-                  <p class="text-center"><a href="#" class="btn btn-success" role="button">Live Preview</a></p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6 col-xs-6 col-md-3">
-              <div class="thumbnail">
-                <img src="../img/img-4-small.jpg" alt="...">
-                <div class="caption">
-                  <h4 class="text-center"><b>Blog</b></h4><br>
-                  <p class="text-center"><a href="#" class="btn btn-success" role="button">Live Preview</a></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
